[FIX] account_reports: vertical align header columns
Change the vertical align of header columns to middle.

closes odoo/enterprise#47136

X-original-commit: 506c0a4409d77f51fc4a33d1e8043e01d942990e

--- a/account_reports/static/src/components/account_report/account_report.scss
+++ b/account_reports/static/src/components/account_report/account_report.scss
@@ -55,7 +55,10 @@
         > :not(caption) > * > * { padding: 0.25rem 0.75rem } //!\\ Override of bootstrap, keep selector
 
         > thead {
-            > tr > th { text-align: center }
+            > tr > th {
+                text-align: center;
+                vertical-align: middle;
+            }
             > tr:not(:last-child) > th:not(:first-child) { border: 1px solid $o-gray-300 }
         }
 
